버그 수정 및 기능 추가

--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -29,6 +29,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
+                app:errorTextAppearance="@style/AppTheme.TextInputLayout.Error"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -40,14 +41,13 @@
                     android:hint="@string/hint_post"
                     android:imeOptions="actionDone"
                     android:inputType="text|textMultiLine|textImeMultiLine|textLongMessage"
-                    android:maxLines="20"
+                    android:maxLines="10"
                     android:scrollbars="vertical"
                     tools:ignore="Autofill" />
             </android.support.design.widget.TextInputLayout>
 
-            <android.support.v7.widget.AppCompatButton
+            <Button
                 android:id="@+id/sendButton"
-                style="@style/AppTheme.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -55,10 +55,10 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:drawableStart="@drawable/ic_send"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
+                android:padding="16dp"
                 android:text="@string/post"
                 android:textColor="@color/colorPrimary"
+                android:theme="@style/AppTheme.Button"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
