--- a/app/src/main/res/layout/fragment_admin_sets.xml
+++ b/app/src/main/res/layout/fragment_admin_sets.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include android:id="@+id/admin" layout="@layout/fragment_admin"/>
-    <include android:id="@+id/signIn" layout="@layout/fragment_sign_in"/>
+    <include
+        android:id="@+id/signIn"
+        layout="@layout/fragment_sign_in" />
+
+    <include
+        android:id="@+id/admin"
+        layout="@layout/fragment_admin" />
 
 </android.support.constraint.ConstraintLayout>
