--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -26,6 +26,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginBottom="8dp"
+                app:errorTextAppearance="@style/AppTheme.TextInputLayout.Error"
                 app:layout_constraintBottom_toTopOf="@+id/inputPWLayout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -50,10 +51,13 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginBottom="8dp"
+                app:errorTextAppearance="@style/AppTheme.TextInputLayout.Error"
                 app:layout_constraintBottom_toTopOf="@+id/signInButton"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/inputIDLayout">
+                app:layout_constraintTop_toBottomOf="@+id/inputIDLayout"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/colorAccent">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/inputPW"
@@ -66,19 +70,19 @@
                     tools:ignore="Autofill" />
             </android.support.design.widget.TextInputLayout>
 
-            <android.support.v7.widget.AppCompatButton
+            <Button
                 android:id="@+id/signInButton"
-                style="@style/AppTheme.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="4dp"
                 android:layout_marginBottom="8dp"
                 android:drawableStart="@drawable/ic_sign_in"
                 android:padding="16dp"
                 android:text="@string/sign_in"
                 android:textColor="@color/colorPrimary"
+                android:theme="@style/AppTheme.Button"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
