--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#1abc9c</color>
     <color name="colorLogo">#31ae81</color>
     <color name="colorButton">#3a6fdb</color>
-    <color name="colorButtonDeny">#E60A2F</color>
+    <color name="colorButtonDeny">#e60a2f</color>
+    <color name="colorTextError">#ff616f</color>
 </resources>
