URL, E-Mail... 자동 링크 설정

--- a/Android/app/src/main/res/layout/row_admin_content.xml
+++ b/Android/app/src/main/res/layout/row_admin_content.xml
@@ -24,10 +24,11 @@
                 android:id="@+id/doc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="8dp"
+                android:autoLink="all"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -48,13 +49,13 @@
                     style="@style/AppTheme.Button.Borderless"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp"
                     android:drawableStart="@drawable/ic_allow"
-                    android:paddingStart="8dp"
                     android:paddingEnd="8dp"
+                    android:paddingStart="8dp"
                     android:text="@string/allow"
                     android:textColor="@color/colorButton"
                     android:textStyle="bold"
@@ -70,13 +71,13 @@
                     style="@style/AppTheme.Button.Borderless.Deny"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp"
                     android:drawableStart="@drawable/ic_deny"
-                    android:paddingStart="8dp"
                     android:paddingEnd="8dp"
+                    android:paddingStart="8dp"
                     android:text="@string/deny"
                     android:textColor="@color/colorButtonDeny"
                     android:textStyle="bold"
@@ -91,9 +92,9 @@
                     android:id="@+id/timestamp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="8dp"
                     android:orientation="vertical"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
