--- a/Android/app/src/main/res/layout/row_content.xml
+++ b/Android/app/src/main/res/layout/row_content.xml
@@ -55,6 +55,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
+                android:autoLink="all"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
